--- a/Proyecto_cine/asp_presentacion/Pages/Shared/_Layout.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Shared/_Layout.cshtml
@@ -25,9 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li> *@
+                       @*  <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Ventanas/Peliculas">Peliculas</a>
+                        </li> *@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Ventanas/Peliculas">Peliculas</a>
-                        </li>
+                        </li> 
                     </ul>
                 </div>
             </div>
