--- a/Proyecto_cine/asp_presentacion/Pages/Ventanas/Clientes.cshtml
+++ b/Proyecto_cine/asp_presentacion/Pages/Ventanas/Clientes.cshtml
@@ -93,10 +93,10 @@
                         </div>
                          <div class="form-group">
                             <label class="col-lg-4 control-label">
-                                IdMembresia
+                                Membresia
                             </label>
                             <div class="col-lg-6">
-                                <input id="nmIdMembresia"
+                                <input id="nmMembresia"
                                        class="cts_forms form-control"
                                        asp-for="@Model.Actual!.IdMembresia" />
                             </div>
@@ -166,7 +166,7 @@
                                 Edad
                             </th>
                             <th class="cl_hidden">
-                                IdMembresia
+                                Membresia
                             </th>
                             <th class="cl_actions">
                                 Accion
